views: only add extra view to dialog button group when it's a button

If the extra view isn't a button, it should not go in that group.

Bug: 787385
Change-Id: Ifd06896706f2d506069e7528f074e7675942bd64