ui/views/window/dialog_client_view.cc
@@ -445,8 +445,9 @@ void DialogClientView::SetupViews() {
     return;
 
   extra_view_ = GetDialogDelegate()->CreateExtraView();
-  if (extra_view_)
+  if (extra_view_ && Button::AsButton(extra_view_)) {
     extra_view_->SetGroup(kButtonGroup);
+  }
 }
 
 }  // namespace views
